data/derived/sp14/progs/unify/prog4469.ml.out
Characters 0-6:
  fptest 0;;
  ^^^^^^
Error: This expression has type (int -> int) * int
       This is not a function; it cannot be applied.
